# NVARC

./: .gitignore  arc2-llm-trm-z-h-seed-kaggle.ipynb  arc2-qwen3-unsloth-flash-lora-batch4-queue.ipynb  arc2-trm-v31.ipynb  pyproject.toml
TRM/: eval-arc-k-10.py  pretrain-no-eval.py
TRM/evaluators/: arc.py
TRM/models/: ema.py
TRM/models/recursive_reasoning/: hrm.py  transformers_baseline.py  trm.py  trm_hier6.py  trm_singlez.py
hybrid_arc/: __init__.py  arc_tokenize.py  llm_stage.py  pipeline.py  priors.example.json  qwen_formatter_nb.py  run_local.py  trm_stage.py  trm_z_h_seed.py  z_h_seed.py
tools/: gen_kaggle_hybrid_nb.py  gen_priors_from_test_puzzles.py
