[project]
name = "nvarc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "adam-atan2-pytorch==0.2.4",
    "argdantic==1.3.3",
    "coolname==2.2.0",
    "einops>=0.8.2",
    "hydra-core==1.3.2",
    "numba==0.62.1",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }